<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ui.main.MainActivity"
    >

    <LinearLayout
        android:id="@+id/linear_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/msg_type_title" />

        <Button
            android:id="@+id/button_get_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search"
            android:textSize="12sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_page_number"
        android:layout_below="@+id/linear_search_bar"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/linear_page_number"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:background="#9E9E9E"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_previous_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/previous_page"
            android:textColor="#E0E0E0" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="end"
                android:text="@string/current_page"
                android:textColor="#E0E0E0" />

            <TextView
                android:id="@+id/text_current_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FAFAFA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:text="@string/total_page"
                android:textColor="#E0E0E0" />

            <TextView
                android:id="@+id/text_total_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#E0E0E0" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_next_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/next_page"
            android:textColor="#E0E0E0" />

    </LinearLayout>


</RelativeLayout>
